<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:text="Lettem In" />

    <Button
        android:id="@+id/btnGrant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_perms" />

    <Button
        android:id="@+id/btnDefaultScreening"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_default_screening" />

    <Button
        android:id="@+id/btnPickGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_greeting" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />
</LinearLayout>
